luzlogr 0.2.1
===========

* Updated the package for modern CRAN policies and fixed a couple minor issues.


luzlogr 0.2
===========

* Added option to automatically close all log files if an error occurs; see ?closelog.


luzlogr 0.1.3
===========

* Log files now properly tracked even if working directory changes.
* Added option to flush (immediately write) log messages.


luzlogr 0.1.1
===========

* Vignette added.


luzlogr 0.1
===========

* First release of the luzlogr package.
* More information at https://github.com/bpbond/luzlogr.