@@ -1,11 +1,0 @@
-# Sample .travis.yml for R projects
-
-language: r
-warnings_are_errors: true
-sudo: required
-
-r_github_packages:
-  - jimhester/covr
-after_success:
-  - Rscript -e 'library(covr);codecov()'
-  
